@@ -1,5 +1,11 @@
 2003-12-14  Thorsten Jordan  <thorsten_jordan@gmx.de>
 	* user_interface.cpp ocean_wave_generator.h
+	  - more realistic water display.
+	    (will compile with opengl1.3+ only - no windows for now,
+	     maybe incorporate OglExt lib here)
+
+2003-12-14  Thorsten Jordan  <thorsten_jordan@gmx.de>
+	* user_interface.cpp ocean_wave_generator.h
 	  - added computation for water surface normals.
 	  - added computation for choppy waves.
 	  - some bugfixes.
